Готовая мафия с TypeScript

--- a/package.json
+++ b/package.json
@@ -3,13 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@types/react": "16.0.31",
-    "@types/react-dom": "16.0.3",
     "express": "5.2.1",
     "http": "^0.0.0",
     "https": "^1.0.0",
-    "react": "19.3.0-canary-2ba30655-20260219",
-    "react-dom": "19.3.0-canary-2ba30655-20260219",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "socket.io": "4.8.3",
     "socket.io-client": "2.5.0"
   },
@@ -20,6 +18,8 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
+    "@types/react": "^19.2.14",
+    "@types/react-dom": "^19.2.3",
     "react-scripts-ts": "latest"
   }
 }
