--- a/package.json
+++ b/package.json
@@ -1,25 +1,21 @@
 {
-  "name": "react-ts-7g8msb",
-  "version": "0.0.0",
-  "private": true,
-  "dependencies": {
-    "express": "5.2.1",
-    "http": "^0.0.0",
-    "https": "^1.0.0",
-    "react": "^19.2.4",
-    "react-dom": "^19.2.4",
-    "socket.io": "4.8.3",
-    "socket.io-client": "2.5.0"
-  },
+  "name": "mafia-game",
+  "version": "1.0.0",
+  "type": "module",
   "scripts": {
-    "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
-    "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^19.2.14",
-    "@types/react-dom": "^19.2.3",
-    "react-scripts-ts": "latest"
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@vitejs/plugin-react": "^4.0.0",
+    "typescript": "^5.0.0",
+    "vite": "^4.0.0"
   }
 }
